# computer-graphics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  draw_graph.h  editor.h  includes.h  main.cpp
Lab02_1/: Lab02WinF.sln
Lab02_1/Lab02WinF/: FastBitmap.cs  Form1.Designer.cs
Lab02_1_Mochalova/Lab02WinF/: Form1.resx  hist.Designer.cs
assets/: DepthFS.glsl  DepthVS.glsl  FS.glsl  SkyboxFS.glsl  SkyboxVS.glsl  VS.glsl
lab1/: draw_graph.h
lab2/lab2_tkachenko/lab2_comp_graph/: Form1.Designer.cs
lab2/lab2_tkachenko/lab2_comp_graph/Properties/: AssemblyInfo.cs
lab2/rgb2hsv/: converters.h  create_sliders.h  rgb2hsv.h
lab2_tkachenko/lab2_comp_graph/: Form1.cs  Program.cs  lab2_comp_graph.csproj  lab2_comp_graph.sln
lab2_tkachenko/lab2_comp_graph/Properties/: Resources.Designer.cs  Settings.Designer.cs
lab3/task2/: create_line_controls.h  create_tools.h  draw_bresenham_line.h  handle_mouse_click_on_image.h  line.h  wu.h
lab3_mochalova/: Lab02.sln
lab3_mochalova/Lab02/: Buttons.h  Line.h  Shaders.h  gui.cpp  gui.h  imgui.ini  includes.h  rendering.cpp
lab3_mochalova/Lab02/imgui-master/backends/: imgui_impl_glfw.cpp
lab3_mochalova/Lab02/x64/Debug/: vc143.idb
lab3_mochalova/Lab02/x64/Debug/Lab02.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lab02.lastbuildstate  link.read.1.tlog
lab3_mochalova/x64/Debug/: imgui.ini
lab3_tkachenko/: main.cpp
lab4/: CheckPointPositionRelativeEdge.h  IsPointInsidePolygon.h  Point.h  Polygon.h  affine_tools.h  affine_transformations.h  edge_intersection.h  tools.h
no_include_labs/lab2-task1-mochalova/: Form1.cs  Program.cs  hist.cs
no_include_labs/lab3-task1-tkachenko/: CMakeLists.txt  main.cpp
no_include_labs/lab3-task1-tkachenko/include/imgui/examples/example_glfw_wgpu/: CMakeLists.txt
no_include_labs/lab3-task3-mochalova/Lab02/: Buttons.cpp  Lab02.vcxproj  Lab02.vcxproj.filters  Line.cpp  Shaders.cpp  glad.c  includes.h  main.cpp  rendering.h  states.h
no_include_labs/lab3-task3-mochalova/Lab02/imgui-master/examples/example_glfw_wgpu/: CMakeLists.txt
no_include_labs/lab3-task3-mochalova/Lab02/x64/Debug/: Lab02.exe.recipe
no_include_labs/lab3-task3-mochalova/Lab02/x64/Debug/Lab02.tlog/: link.command.1.tlog  link.secondary.1.tlog  link.write.1.tlog
rgb2hsv/: converters.h  create_sliders.h  load_image.h  rgb2hsv.h
src/: includes.h  main.cpp
src/models/: AffineMatrix.cpp  AffineMatrix.h  Color.cpp  Color.h  Line.cpp  Line.h  Matrix4x4.h  Mesh.h  MidpointDisplacementLine.cpp  MidpointDisplacementLine.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Tool.cpp  Tool.h
src/models/3D/: Mesh.h  Point3.h  Polygon3.h  TextureCoord.h  VertexNormal.h
src/models/Fractal/: Fractal.h  FractalParams.h  FractalVertex.h  LSystem.h  TurtleState.h
src/supporting_files/: handle_mouse_click_on_image.cpp  handle_mouse_click_on_image.h  imgui_support.cpp  imgui_support.h  load_image.cpp  load_image.h
src/utils/: Is_point_inside_polygon.h  affine_transforms3D.h  backface_calling.cpp  backface_calling.h  check_point_position_relative_edge.h  converters.h  create_plot.h  create_polyhedrons.h  draw_bresenham_line.h  handle_mouse_click_on_image.h  load_image.h  load_obj.h  rgb_to_hsv.h  save_obj.h  wu.h
src/utils/converters/: apply_hsv_adjustments.cpp  apply_hsv_adjustments.h  converters.h  hsv_to_rgb.cpp  hsv_to_rgb.h  image_to_texture.cpp  image_to_texture.h  rgb_to_hsv.cpp  rgb_to_hsv.h  rgb_to_hsv_image_transform.cpp  rgb_to_hsv_image_transform.h  update_texture.cpp  update_texture.h
src/utils/line_draw/: BezierCurve.h  draw_bresenham_line.cpp  draw_bresenham_line.h  draw_wu_line.cpp  draw_wu_line.h  fill_all.cpp  fill_all.h  wu.h
src/utils/midpoint_displacement/: draw_midpoing_displacement.cpp  draw_midpoing_displacement.h  draw_midpoint_displacement.h
src/utils/polygon_transform/: Is_point_inside_polygon.cpp  Is_point_inside_polygon.h  affine_transformations.h  check_point_position_relative_edge.cpp  check_point_position_relative_edge.h  edge_intersection.h  find_intersection.cpp  find_intersection.h
src/views/: affine_tools.cpp  affine_tools.h  create_fractal_tool.h  create_sliders.h  create_tools.h  drawing_tools_view.cpp  drawing_tools_view.h  fractal_tools.cpp  fractal_tools.h  hsv_sliders.cpp  hsv_sliders.h  light_tools.cpp  light_tools.h  line_controls.cpp  line_controls.h  message_box.h  midpoint_displacement_tools.cpp  midpoint_displacement_tools.h  rotation_figure_creator.cpp  rotation_figure_creator.h  rotation_tools.h  view_vector.h
src/views/editor/: editor.cpp  editor.h
src/views/editor3d/: Editor3DView.h
src/views/fractal_view/: fractal_editor.h  fractal_tools.h
